add default values to url params for swagger
