# backend/docs/swagger.json
@@ -227,6 +227,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -263,6 +264,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "1",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -296,6 +298,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -349,6 +352,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -379,6 +383,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -432,6 +437,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -439,6 +445,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Team ID",
                         "name": "teamId",
                         "in": "path",
@@ -475,6 +482,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "1",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -482,6 +490,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "1",
                         "description": "Team ID",
                         "name": "teamId",
                         "in": "path",
@@ -515,6 +524,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -522,6 +532,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Team ID",
                         "name": "teamId",
                         "in": "path",
@@ -575,6 +586,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -582,6 +594,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "4",
                         "description": "Team ID",
                         "name": "teamId",
                         "in": "path",
@@ -612,6 +625,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -619,6 +633,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "3",
                         "description": "Team ID",
                         "name": "teamId",
                         "in": "path",
@@ -672,6 +687,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -679,6 +695,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "4",
                         "description": "Team ID",
                         "name": "teamId",
                         "in": "path",
@@ -686,6 +703,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Result ID",
                         "name": "resultId",
                         "in": "path",
@@ -722,6 +740,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -729,6 +748,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "3",
                         "description": "Team ID",
                         "name": "teamId",
                         "in": "path",
@@ -736,6 +756,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "1",
                         "description": "Result ID",
                         "name": "resultId",
                         "in": "path",
@@ -769,6 +790,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Season ID",
                         "name": "seasonId",
                         "in": "path",
@@ -776,6 +798,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "4",
                         "description": "Team ID",
                         "name": "teamId",
                         "in": "path",
@@ -783,6 +806,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "2",
                         "description": "Result ID",
                         "name": "resultId",
                         "in": "path",
@@ -844,7 +868,7 @@
                 },
                 "opponentTeamId": {
                     "type": "integer",
-                    "example": 7
+                    "example": 4
                 },
                 "score": {
                     "type": "string",
@@ -928,7 +952,7 @@
                     "type": "string",
                     "example": "14"
                 },
-                "opponentTeam": {
+                "opponentTeamId": {
                     "type": "integer",
                     "example": 7
                 },
@@ -936,9 +960,17 @@
                     "type": "string",
                     "example": "16"
                 },
-                "team": {
+                "seasonId": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "teamId": {
                     "type": "integer",
                     "example": 6
+                },
+                "userUUID": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
                 }
             }
         },
@@ -973,6 +1005,10 @@
                 "startDate": {
                     "type": "string",
                     "example": "2025-06-01T00:00:00Z"
+                },
+                "userUUID": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
                 }
             }
         },
@@ -1016,6 +1052,14 @@
                 "name": {
                     "type": "string",
                     "example": "BIG Clan"
+                },
+                "seasonId": {
+                    "type": "integer",
+                    "example": 5
+                },
+                "userUUID": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
                 }
             }
         },
